[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/used Gun - Bullet/4. gun enemy.png" type="Texture" id=1]
[ext_resource path="res://script/GunPivotEnemy.gd" type="Script" id=2]

[node name="GunPivotEnemy" type="Position2D"]
script = ExtResource( 2 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( -0.0224752, 0 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="GunPoint" type="Node2D" parent="Gun"]
position = Vector2( 9.46008, 0 )

[node name="GunFiringZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunFiringZone"]

[connection signal="body_entered" from="GunFiringZone" to="." method="_on_playerDetection_body_entered"]
[connection signal="body_exited" from="GunFiringZone" to="." method="_on_playerDetection_body_exited"]
